pushing to try to fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*{
+body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,8 +6,8 @@
 
 }
 #particles-js{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     z-index: -1;
 }
